--- a/Development/Editor/Core/ydbase/ydbase.vcxproj
+++ b/Development/Editor/Core/ydbase/ydbase.vcxproj
@@ -13,6 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{75B04C07-94D9-41E7-BBFD-E67F79BFF41A}</ProjectGuid>
     <RootNamespace>ydbase</RootNamespace>
+    <ProjectName>yd_YDWEBase</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
